--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,10 @@ a {
 
 /* Стили главной навигации */
 .main-navigation {
-    font-family: "Roboto Medium", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 30px;
+    font-weight: 500;
     color: #000;
     text-transform: uppercase;
     
@@ -92,9 +93,10 @@ a {
 */
 /* Главный заголовок страницы каталога */
 .catalog h1 {
-    font-family: "Roboto Medium", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 55px;
     line-height: 55px;
+    font-weight: 500;
     text-align: center;
     background-color: #eeeeee;
 }
@@ -111,7 +113,7 @@ a {
 
 /* Параметры шрифта в legend */
 .list-header {
-    font-family: "Roboto Bold", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 18px;
     line-height: 30px;
     font-weight: 700;
@@ -128,9 +130,10 @@ a {
 
  /* Параметры шрифта в "СТОИМОСТЬ:" */
  .price-from-to label {
-    font-family: "Roboto Regular", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 22px;
+    font-weight: 700;
     text-transform: uppercase;
     color: #283136;
  }
@@ -168,9 +171,10 @@ a {
 
 /* Кнопка "Показать" */
 .templates-filter input[type="submit"] {
-    font-family: "Roboto Medium", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 18px;
+    font-weight: 500;
     padding: 17px 90px;
     background-color: #eeeeee;
     border: none;
@@ -187,11 +191,6 @@ a {
     color: #959595;
     background-color: #d5d5d5;
     box-shadow: inset 0 4px 0 0 #bfbfbf;
-}
-
-/* ВРЕМЕННО! */
-:focus {
-    outline: none;
 }
 
 /* Переопределяем стили для ссылок в сортировке */
@@ -238,10 +237,11 @@ a {
 }
 
 /* Заголовки шаблонов */
-.templates h3 {
-    font-family: "Roboto Bold", sans-serif;
+.templates a {
+    font-family: 'Roboto', sans-serif;
     font-size: 18px;
     line-height: 30px;
+    font-weight: 700;
     text-transform: uppercase;
     color: #000000;
 }
@@ -258,9 +258,10 @@ a {
 
 /* Блок с ценой */
 .templates .price {
-    font-family: "Rpboto Medium", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 18px;
+    font-weight: 500;
     text-transform: uppercase;
     color: #ffffff;
     background-color: #fb565a;
@@ -286,9 +287,10 @@ a {
 
 /* Стили для пагинатора */
 .pagination-list a {
-    font-family: "Roboto Medium", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 18px;
+    font-weight: 500;
     text-transform: uppercase;
     color: #000000;
 
@@ -323,22 +325,25 @@ a {
 }
 
 .top-slider h2 {
-    font-family: "Roboto Medium";
+    font-family: 'Roboto', sans-serif;
     font-size: 55px;
     line-height: 55px;
+    font-weight: 500;
 }
 
 .top-slider p {
-    font-family: "Roboto Regular";
+    font-family: 'Roboto', sans-serif; 
     font-size: 16px;
     line-height: 24px;
+    font-weight: 400;
 }
 
 /* Кнопка "узнать больше" */
 .top-slider .button {
-    font-family: Roboto Medium;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 18px;
+    font-weight: 500;
     text-align: center;
     text-transform: uppercase;
     padding: 16px 55px;
@@ -365,9 +370,10 @@ a {
 }
 
 .advantages h3 {
-    font-family: Roboto Bold, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 24px;
     line-height: 30px;
+    font-weight: 700;
 }
 
 .advantages .color-red {
@@ -383,9 +389,10 @@ a {
 }
 
 .advantages .button {
-    font-family: Roboto Medium;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 18px;
+    font-weight: 500;
     text-transform: uppercase;
     text-align: center;
     padding: 16px 45px;
@@ -434,16 +441,17 @@ a {
 
 /* Преимущества */
 .studio b {
-    font-family: "Roboto Medium", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 45px;
     line-height: 45px;
+    font-weight: 500;
 }
 
 .studio .bold {
-    font-family: "Roboto Bold", sans-serif;
-    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 24px;
+    font-weight: 700;
     text-transform: uppercase;
 }
 
@@ -455,8 +463,9 @@ a {
 }
 /* "Проценты" */
 .percent span {
-    font-family: "Roboto Bold", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 45px;
+    line-height: 10.06px; /* ?! Это из макета */
     font-weight: 700;
 }
 
@@ -491,18 +500,19 @@ a {
 }
 
 .contacts-title {
-    font-family: "Roboto Medium", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     font-size: 18px;
     line-height: 30px;
 } 
 
 /* Кнопка вызова модального окна "напишите нам" */
 .contacts .button {
-    font-family: "Roboto Medium", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 18px;
+    font-weight: 500;
     text-align: center;
     text-transform: uppercase;
     padding: 16px 55px;
@@ -519,14 +529,15 @@ a {
 }
 
 .write-us h3 {
-    font-family: "Roboto Medium", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 45px;
     line-height: 45px;
+    font-weight: 500;
 }
 
 /* Подписи к полям */
 .write-us label {
-    font-family: "Roboto Medium", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 18px;
@@ -535,12 +546,16 @@ a {
 /*  Поля формы */
 .write-us input,
 .write-us textarea{
-    font: inherit;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
     border: 2px solid #d7dcde;
     border-radius: 2px;
     padding-left: 15px;
     padding-top: 20px;
     padding-bottom: 20px;
+    color: #8f8f8f;
 }
 
 .write-us input[type="email"]:invalid {
@@ -550,9 +565,10 @@ a {
 
 /* Кнопка отправки формы */
 .write-us input[type="submit"] {
-    font-family: "Roboto Medium", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 18px;
+    font-weight: 500;
     text-align: center;
     text-transform: uppercase;
     padding: 16px 55px;
@@ -564,7 +580,7 @@ a {
 
 /* Социальные сети */
 .social-description b {
-    font-family: "Roboto Bold", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 36px;
     line-height: 36px;
     font-weight: 700;
@@ -608,5 +624,5 @@ a {
 /* убираем дефолтную рамку */
 .write-us button[type="button"] {
     border: none;
-    background-color: inherit; /* так и не понял откуда взялся у кнопки серый фон, пришлось убирать */
+    background-color: inherit;
 }
